# ediscovery_tests

./: .env.example  .gitignore  API_DICTIONARY.md  ARCHITECTURE.md  BETA-Marcus-Chen-20260514.md  BETA_USER_README.md  BUG_LOG.md  CHANGELOG.md  DEMO_SCRIPT.md  DR_Workflow_Guide.md  DR_freshinstall.exp  DR_freshinstall.py  HANDOFF.md  PLAN.md  QA-DR_freshinstall-v0171.md  QA-execution-v0.19.3.md  QA-handover-v0.19.3.md  QA-v0.14.4-handover-20260514T034704Z.md  QA_README.md  README.md  __version__.py  cleandr.sh  cli.py  config.py  conftest.py  debug_create_data_area.py  debug_login.py  dr_freshinstall.py  dr_localnfscreate.sh  fullWorkflow.py  go.sh  locustfile.py  locustfile_indexing.py  nfspaths.txt  playwright_capture_edits.py  playwright_fresh_init.py  playwright_fresh_install.py  proxy_logger.py  pyproject.toml  pytest.ini  (+5 more)
.github/workflows/: ci.yml  smoke.yml
commands/: __init__.py  admin.py  campaign.py  record.py  report.py
demo-v0.15.1/: cli-tour.txt  index.html
docs/: API_PROGRAMMING_GUIDE.md  DR_ROLE_SETUP.md  QA_TEST_PLAN.md  RUNBOOK.md  endpoints_v0.05.md  endpoints_v0.06.md  endpoints_v0.08.md
dr_tui/: __init__.py  __main__.py  app.py  app.tcss  cli_jobdel.py  cli_jobrun.py  data.py  help.py  metrics.py  reef_tool.py  scheduler.py
dr_tui/help_content/: help_index.json  org-connectors.md  org-groups.md  org-running.md  org-storage.md  org-users.md  sys-groups.md  sys-idx-depots.md  sys-mail.md  (+5 more)
helpers/: __init__.py  admin_ops.py  api_client.py  monitor.py  preflight.py  style.py
misc/: DR_FreshInstall.json  DrSwagger.java  createDRproject-msedge.json  debug_create_data_area.py  drupgrade.exp  endpoints_v0.06_draft.md  full_workflow.py  playwright_capture_writes.py  syssettings-capture-20260515.json
packaging/: Makefile  README.md  build-rpm.sh  dr-load-recorder.env.example  dr-load.spec  dr-tools.spec  install.sh
recorder/: __init__.py  __main__.py  daemon.py  health.py  store.py
scripts/: demo-capture.sh  demo-prep.sh
tests/: test_auth.py  test_billing.py  test_connectors.py  test_dr_tui_dashboard_layout.py  test_dr_tui_depot_modal.py  test_dr_tui_scheduler.py  test_e2e_bootstrap.py  test_indexing_workflow.py  test_ocr_report.py  test_org_user.py  test_organizations.py  test_projects.py  test_recorder.py  test_status.py  test_workflows.py
tools/: extract_help.py
(+11 files in other folders)
