[metadata]
name = ediscovery-tests
version = attr: __version__.__version__
description = Digital Reef eDiscovery load tester CLI
author = Digital Reef

[options]
packages = find:
py_modules =
    cli
    config
python_requires = >=3.9
install_requires =
    requests>=2.31.0
    pytest>=7.4.0
    pytest-html>=4.1.0
    pytest-xdist>=3.5.0
    python-dotenv>=1.0.0
    locust>=2.20.0
    pydantic>=2.5.0
    typer>=0.9.0
    psycopg2-binary>=2.8.0
    textual>=0.40.0

[options.entry_points]
console_scripts =
    dr-load = cli:app
    dr-tui  = dr_tui.app:main

[options.packages.find]
exclude =
    tests*
    *.tests*
