[metadata]
name = dr-tools
version = attr: __version__.__version__
description = Digital Reef eDiscovery load tester CLI + Textual TUI dashboard
long_description = file: README.md
long_description_content_type = text/markdown
author = Digital Reef
author_email = mmcclelland@digitalreefinc.com
license = Proprietary

[options]
packages = find:
py_modules =
    cli
    config
python_requires = >=3.9
install_requires =
    requests>=2.31.0
    python-dotenv>=1.0.0
    locust>=2.20.0
    pydantic>=2.5.0
    typer>=0.9.0
    rich>=13.0.0
    psycopg2-binary>=2.8.0
    textual>=0.40.0
    psutil>=5.9.0

[options.extras_require]
# pip install -e .[dev] for pytest + Playwright + mitmproxy
dev =
    pytest>=7.4.0
    pytest-html>=4.1.0
    pytest-xdist>=3.5.0
    playwright>=1.40.0
    mitmproxy>=10.0.0

[options.entry_points]
console_scripts =
    dr-load = cli:app
    dr-tui  = dr_tui.app:main

[options.packages.find]
exclude =
    tests*
    *.tests*
    misc*
    packaging*

[options.package_data]
# Textual stylesheets ship inside the dr_tui package so they're
# importable from wherever the package gets installed (system / venv /
# editable). Without this, `pip install` skips non-.py files.
dr_tui =
    *.tcss
